<resources>
	<string name="app_name">Recipr</string>
	<string name="title_activity_overview">Recipr</string>
	<string name="title_activity_add_recipe">Add new Recipe</string>
	<string name="title_activity_welcome">Recipr</string>
	<string name="welcome">Welcome to Recipr</string>
	<string name="section_footer_title">MORE</string>
	<string name="action_select_image_title">Select Image</string>
	<string name="action_save_recipe_title">Save Recipe</string>
	<string name="error_recipe_name">The recipe name cannot be empty</string>
	<string name="error_category_name">You must provide a category.</string>
	<string name="add_recipe_preparation_title">Preparation</string>
	<string name="confirm_add_recipe_abort_message">Do you really want to discard your recipe?</string>
	<string name="confirm_add_recipe_abort_title">Discard</string>
	<string name="confirm_add_recipe_abort_yes">Discard</string>
	<string name="confirm_add_recipe_abort_no">Cancel</string>
	<string name="add_recipe_name">Name</string>
	<string name="add_recipe_category">Category</string>
	<string name="add_recipe_ingredients">Ingredients</string>
	<string name="add_recipe_add_step">Add preparation step to recipe.</string>
	<string name="add_recipe_image">Recipe image</string>
	<string name="error_steps">You must provide some steps to prepare the recipe</string>
	<string name="error_ingredients">You must provide some ingredients</string>
	<string name="add_recipe_add_ingredient">Add ingredient to recipe</string>
	<string name="alert_add_ingredient_name">Name</string>
	<string name="alert_add_ingredient_quantity">Quantity</string>
	<string name="alert_add_ingredient_unit">Unit</string>
	<string name="alert_add_step_instruction">Instruction</string>
	<string name="recipe_detail_image">Recipe image</string>
	<string name="recipe_details_ingredients_title">Ingredients</string>
	<string name="recipe_details_steps_title">Preparation</string>
	<string name="login_background">Recipr</string>
	<string name="login_connection_error">Check your connection.</string>
	<string name="login_signin_error">Sign In Failed</string>
	<string name="add_recipe_image_selection_camera">Camera</string>
	<string name="add_recipe_image_selection_gallery">Gallery</string>
	<string name="add_recipe_alert_add_step_title">Add Preparation Step</string>
	<string name="add_recipe_alert_add_step_add">ADD</string>
	<string name="add_recipe_alert_add_step_cancel">CANCEL</string>
	<string name="add_recipe_add_ingredient_title">Add Ingredient</string>
	<string name="add_recipe_add_ingredient_add">ADD</string>
	<string name="add_recipe_add_ingredient_cancel">CANCEL</string>
	<string name="menu_overview_search">Search</string>
	<string name="menu_logout_action">Logout</string>
	<string name="image_of_recipe">Image of Recipe</string>
	<string name="favorites_overview_empty_message">Hey %1$s.\n\nIt seems that you have no favorites yet. Want to create one?</string>
	<string name="categories_overview_empty_message">Hey %1$s.\n\nIt seems that you have no recipes yet. Want to create one?</string>
</resources>
