<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:fragmentManager="de.androidbytes.recipr.presentation.screen.detail.add.AddRecipeActivity">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/appBarLayout"
		android:layout_width="match_parent"
		android:background="@color/colorPrimary"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:layout_scrollFlags="scroll|enterAlways"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_scrollFlags="scroll|enterAlways"
			app:popupTheme="@style/AppTheme.PopupOverlay">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingStart="32dp"
				android:paddingTop="0dp"
				android:paddingBottom="32dp"
				android:paddingEnd="32dp">

				<android.support.design.widget.TextInputLayout
					android:id="@+id/et_name_wrapper"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp">

					<EditText
						android:id="@+id/et_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:nextFocusForward="@+id/et_category"
						android:ems="10"
						android:hint="@string/add_recipe_name"/>

				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/et_category_wrapper"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp">

					<AutoCompleteTextView
						android:id="@+id/et_category"
						android:nextFocusForward="@+id/addIngredientButton"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/add_recipe_category">
					</AutoCompleteTextView>

				</android.support.design.widget.TextInputLayout>


			</LinearLayout>
		</android.support.v7.widget.Toolbar>

	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/add_recipe_ingredients_title"
				android:layout_width="match_parent"
				android:padding="@dimen/activity_horizontal_margin"
				style="@android:style/Widget.EditText"
				android:background="#eee"
				android:layout_height="wrap_content"
				android:text="@string/add_recipe_ingredients"/>

			<com.linearlistview.LinearListView
				android:id="@+id/ingredients_list"
				android:paddingLeft="32dp"
				android:paddingStart="32dp"
				android:paddingRight="32dp"
				android:paddingEnd="32dp"
				android:paddingTop="16dp"
				android:paddingBottom="16dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

			</com.linearlistview.LinearListView>

			<ImageView
				android:id="@+id/addIngredientButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/add_recipe_add_ingredient"
				android:layout_gravity="end"
				android:layout_marginEnd="32dp"
				android:layout_marginRight="32dp"
				android:layout_marginBottom="32dp"
				android:src="@drawable/ic_add_primary_24dp"/>


			<TextView
				android:id="@+id/add_recipe_steps_title"
				android:layout_width="match_parent"
				style="@android:style/Widget.EditText"
				android:padding="@dimen/activity_horizontal_margin"
				android:background="#eee"
				android:layout_height="wrap_content"
				android:text="@string/add_recipe_preparation_title"/>

			<com.linearlistview.LinearListView
				android:id="@+id/steps_list"
				android:paddingLeft="32dp"
				android:paddingStart="32dp"
				android:paddingRight="32dp"
				android:paddingEnd="32dp"
				android:paddingTop="16dp"
				android:paddingBottom="16dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

			</com.linearlistview.LinearListView>

			<ImageView
				android:contentDescription="@string/add_recipe_add_step"
				android:id="@+id/addPreparationStepButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:layout_marginRight="32dp"
				android:layout_marginEnd="32dp"
				android:layout_marginBottom="32dp"
				android:src="@drawable/ic_add_primary_24dp"/>


			<ImageView
				android:contentDescription="@string/add_recipe_image"
				android:id="@+id/iv_recipe_image"
				android:scaleType="centerInside"
				android:adjustViewBounds="true"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

		</LinearLayout>

	</android.support.v4.widget.NestedScrollView>


	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_anchor="@id/appBarLayout"
		app:layout_anchorGravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		android:src="@drawable/ic_camera_alt_white_18dp"/>

</android.support.design.widget.CoordinatorLayout>
