<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:padding="32dp"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content">

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/tv_ingredient"
			android:nextFocusForward="@+id/tv_quantity"
			android:nextFocusDown="@+id/tv_quantity"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/alert_add_ingredient_name"/>

	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:baselineAligned="false">

		<android.support.design.widget.TextInputLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/tv_quantity"
				android:nextFocusForward="@+id/tv_unit"
				android:nextFocusUp="@+id/tv_ingredient"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/alert_add_ingredient_quantity"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/tv_unit"
				android:nextFocusUp="@+id/tv_ingredient"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/alert_add_ingredient_unit"/>

		</android.support.design.widget.TextInputLayout>

	</LinearLayout>

</LinearLayout>